[package]
name = "rtb-listener"
version = "0.1.0"
authors = ["Emil Eriksson <emil.eriksson@codemill.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.6"
tokio = { version = "0.2", features = ["full"] }
